--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "3.6.0",
+  "version": "4.0.0",
   "compatibility": ">=5.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -80,6 +80,47 @@
   ],
   "source": "https://github.com/gruijter/com.gruijter.powerhour",
   "flow": {
+    "triggers": [
+      {
+        "title": {
+          "en": "The power changed",
+          "nl": "Het vermogen is veranderd",
+          "de": "Der Verbrauch hat sich gändert",
+          "fr": "L'énergie a changé",
+          "it": "L'energia è cambiata",
+          "sv": "Strömmen ändrades",
+          "no": "Strømmen ble endret",
+          "es": "La potencia ha cambiado",
+          "da": "Strømmen ændrede sig"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=power"
+          }
+        ],
+        "tokens": [
+          {
+            "name": "measure_watt_avg",
+            "title": {
+              "en": "Power",
+              "nl": "Vermogen",
+              "de": "Leistung",
+              "fr": "Puissance",
+              "it": "Potenza",
+              "sv": "Effekt",
+              "no": "Effekt",
+              "es": "Potencia",
+              "da": "Effekt"
+            },
+            "type": "number",
+            "example": 7.5
+          }
+        ],
+        "id": "measure_watt_avg_changed"
+      }
+    ],
     "actions": [
       {
         "title": {
@@ -91,13 +132,102 @@
           {
             "type": "device",
             "name": "device",
-            "filter": "driver_id=power|gas| water"
+            "filter": "driver_id=power|gas|water"
           }
         ],
         "id": "minmax_reset"
       },
       {
-        "id": "set_tariff_gas",
+        "title": {
+          "en": "Send gas reading to virtual meter",
+          "nl": "Stuur gasstand naar virtueel apparaat"
+        },
+        "titleFormatted": {
+          "en": "Send [[value]] reading to [[virtual_device]]",
+          "nl": "Stuur [[value]] stand naar [[virtual_device]]"
+        },
+        "highlight": true,
+        "args": [
+          {
+            "name": "virtual_device",
+            "type": "autocomplete",
+            "title": {
+              "en": "Virtual device",
+              "nl": "Virtueel apparaat"
+            }
+          },
+          {
+            "name": "value",
+            "type": "number",
+            "placeholder": {
+              "en": "Gas (m³)",
+              "nl": "Gas (m³)"
+            }
+          }
+        ],
+        "id": "set_meter_gas"
+      },
+      {
+        "title": {
+          "en": "Send energy reading to virtual meter",
+          "nl": "Stuur energiestand naar virtueel apparaat"
+        },
+        "titleFormatted": {
+          "en": "Send [[value]] reading to [[virtual_device]]",
+          "nl": "Stuur [[value]] stand naar [[virtual_device]]"
+        },
+        "highlight": true,
+        "args": [
+          {
+            "name": "virtual_device",
+            "type": "autocomplete",
+            "title": {
+              "en": "Virtual device",
+              "nl": "Virtueel apparaat"
+            }
+          },
+          {
+            "name": "value",
+            "type": "number",
+            "placeholder": {
+              "en": "Energy (kWh)",
+              "nl": "Energie (kWh)"
+            }
+          }
+        ],
+        "id": "set_meter_power"
+      },
+      {
+        "title": {
+          "en": "Send water reading to virtual meter",
+          "nl": "Stuur waterstand naar virtueel apparaat"
+        },
+        "titleFormatted": {
+          "en": "Send [[value]] reading to [[virtual_device]]",
+          "nl": "Stuur [[value]] stand naar [[virtual_device]]"
+        },
+        "highlight": true,
+        "args": [
+          {
+            "name": "virtual_device",
+            "type": "autocomplete",
+            "title": {
+              "en": "Virtual device",
+              "nl": "Virtueel apparaat"
+            }
+          },
+          {
+            "name": "value",
+            "type": "number",
+            "placeholder": {
+              "en": "Water (m³)",
+              "nl": "Water (m³)"
+            }
+          }
+        ],
+        "id": "set_meter_water"
+      },
+      {
         "title": {
           "en": "Set a new gas tariff",
           "nl": "Stel een nieuw gastarief in"
@@ -116,16 +246,16 @@
               "nl": "Het tarief per m³"
             }
           }
-        ]
+        ],
+        "id": "set_tariff_gas"
       },
       {
-        "id": "set_tariff_power",
         "title": {
-          "en": "Set a new power tariff",
+          "en": "Set a new energy tariff",
           "nl": "Stel een nieuw energietarief in"
         },
         "titleFormatted": {
-          "en": "Set power tariff to [[tariff]]",
+          "en": "Set energy tariff to [[tariff]]",
           "nl": "Stel energietarief in op [[tariff]]"
         },
         "highlight": true,
@@ -138,10 +268,10 @@
               "nl": "Het tarief per kWh"
             }
           }
-        ]
+        ],
+        "id": "set_tariff_power"
       },
       {
-        "id": "set_tariff_water",
         "title": {
           "en": "Set a new water tariff",
           "nl": "Stel een nieuw watertarief in"
@@ -160,7 +290,8 @@
               "nl": "Het tarief per m³"
             }
           }
-        ]
+        ],
+        "id": "set_tariff_water"
       }
     ]
   },
@@ -216,6 +347,48 @@
                 "nl": "Apparaat naam"
               },
               "value": "unknown"
+            },
+            {
+              "id": "source_device_type",
+              "type": "label",
+              "label": {
+                "en": "Source device type",
+                "nl": "Type bron apparaat"
+              },
+              "value": "Homey device",
+              "hint": {
+                "en": "Either Homey device or Virtual device. The meter of a virtual device can only be updated via a flow.",
+                "nl": "Homey apparaat of virtueel apparaat. De meter van een virtueel apparaat kan alleen worden geupdated via een flow."
+              }
+            },
+            {
+              "id": "homey_device_daily_reset",
+              "type": "checkbox",
+              "label": {
+                "en": "Has daily reset",
+                "nl": "Heeft dagelijkse reset"
+              },
+              "hint": {
+                "en": "The meter of this source device resets every midnight to 0",
+                "nl": "De meter van dit bronapparaat reset naar 0 om middernacht"
+              },
+              "value": false
+            },
+            {
+              "id": "interval",
+              "type": "number",
+              "label": {
+                "en": "Update interval (minutes)",
+                "nl": "Update interval (minuten)"
+              },
+              "hint": {
+                "en": "Set to 0 to get immediate updates. This can slightly increase system load. This setting is ignored for virtual source devices.",
+                "nl": "Zet op 0 voor directe updates. Dit kan echter de systeem belasting iets verhogen. Deze instelling wordt niet gebruikt voor virtuele bron apparaten."
+              },
+              "value": 0,
+              "min": 0,
+              "max": 5,
+              "step": 1
             }
           ]
         },
@@ -248,6 +421,18 @@
               "value": "0",
               "hint": {
                 "en": "This is the meter reading from the soure device, updated once an hour."
+              }
+            },
+            {
+              "id": "meter_day_start",
+              "type": "number",
+              "label": {
+                "en": "This day start",
+                "nl": "Deze dag start"
+              },
+              "value": 0,
+              "hint": {
+                "en": "Enter the meter reading at the start of this day. It is automatically updated at midnight."
               }
             },
             {
@@ -492,6 +677,32 @@
               "value": "unknown"
             },
             {
+              "id": "source_device_type",
+              "type": "label",
+              "label": {
+                "en": "Source device type",
+                "nl": "Type bron apparaat"
+              },
+              "value": "Homey device",
+              "hint": {
+                "en": "Either Homey device or Virtual device. The meter of a virtual device can only be updated via a flow.",
+                "nl": "Homey apparaat of virtueel apparaat. De meter van een virtueel apparaat kan alleen worden geupdated via een flow."
+              }
+            },
+            {
+              "id": "use_measure_source",
+              "type": "checkbox",
+              "label": {
+                "en": "Use Watt as source",
+                "nl": "Gebruik Watt als bron"
+              },
+              "hint": {
+                "en": "Some source devices do not have a kWh meter. Using W is a less accurate fallback method. ONLY USE THIS IF kWh IS NOT POSSIBLE!",
+                "nl": "Sommige bron apparaten hebben geen kWh meter. Het gebruik van W is een minder nauwkeurig alternatief. ALLEEN GEBRUIKEN ALS kWh NIET MOGELIJK IS!"
+              },
+              "value": false
+            },
+            {
               "id": "homey_device_daily_reset",
               "type": "checkbox",
               "label": {
@@ -499,8 +710,8 @@
                 "nl": "Heeft dagelijkse reset"
               },
               "hint": {
-                "en": "The meter of this device resets every midnight to 0",
-                "nl": "De meter van dit apparaat reset naar 0 om middernacht"
+                "en": "The meter of this source device resets every midnight to 0",
+                "nl": "De meter van dit bron apparaat reset naar 0 om middernacht"
               },
               "value": false
             },
@@ -512,8 +723,8 @@
                 "nl": "Update interval (minuten)"
               },
               "hint": {
-                "en": "Set to 0 to get immediate updates. This can slightly increase system load.",
-                "nl": "Zet op 0 voor directe updates. Dit kan echter de systeem belasting iets verhogen."
+                "en": "Set to 0 to get immediate updates. This can slightly increase system load. This setting is ignored for virtual source devices.",
+                "nl": "Zet op 0 voor directe updates. Dit kan echter de systeem belasting iets verhogen. Deze instelling wordt niet gebruikt voor virtuele bron apparaten."
               },
               "value": 0,
               "min": 0,
@@ -820,6 +1031,19 @@
               "value": "unknown"
             },
             {
+              "id": "source_device_type",
+              "type": "label",
+              "label": {
+                "en": "Source device type",
+                "nl": "Type bron apparaat"
+              },
+              "value": "Homey device",
+              "hint": {
+                "en": "Either Homey device or Virtual device. The meter of a virtual device can only be updated via a flow.",
+                "nl": "Homey apparaat of virtueel apparaat. De meter van een virtueel apparaat kan alleen worden geupdated via een flow."
+              }
+            },
+            {
               "id": "homey_device_daily_reset",
               "type": "checkbox",
               "label": {
@@ -827,10 +1051,26 @@
                 "nl": "Heeft dagelijkse reset"
               },
               "hint": {
-                "en": "The meter of this device resets every midnight to 0",
-                "nl": "De meter van dit apparaat reset naar 0 om middernacht"
+                "en": "The meter of this source device resets every midnight to 0",
+                "nl": "De meter van dit bronapparaat reset naar 0 om middernacht"
               },
               "value": false
+            },
+            {
+              "id": "interval",
+              "type": "number",
+              "label": {
+                "en": "Update interval (minutes)",
+                "nl": "Update interval (minuten)"
+              },
+              "hint": {
+                "en": "Set to 0 to get immediate updates. This can slightly increase system load. This setting is ignored for virtual source devices.",
+                "nl": "Zet op 0 voor directe updates. Dit kan echter de systeem belasting iets verhogen. Deze instelling wordt niet gebruikt voor virtuele bron apparaten."
+              },
+              "value": 0,
+              "min": 0,
+              "max": 5,
+              "step": 1
             }
           ]
         },
@@ -863,6 +1103,18 @@
               "value": "0",
               "hint": {
                 "en": "This is the meter reading from the soure device, updated once an hour."
+              }
+            },
+            {
+              "id": "meter_day_start",
+              "type": "number",
+              "label": {
+                "en": "This day start",
+                "nl": "Deze dag start"
+              },
+              "value": 0,
+              "hint": {
+                "en": "Enter the meter reading at the start of this day. It is automatically updated at midnight."
               }
             },
             {
@@ -1066,6 +1318,26 @@
       "setable": false,
       "icon": "./assets/last_minmax_reset.svg"
     },
+    "measure_gas": {
+      "type": "number",
+      "title": {
+        "en": "Gas",
+        "nl": "Gas"
+      },
+      "desc": {
+        "en": "Gas usage",
+        "nl": "Gasverbruik"
+      },
+      "decimals": 4,
+      "units": {
+        "en": "m³ /hr",
+        "nl": "m³ /uur"
+      },
+      "getable": true,
+      "setable": false,
+      "insights": true,
+      "icon": "/assets/measure_gas.svg"
+    },
     "measure_lpm_max": {
       "type": "number",
       "title": {
@@ -1100,6 +1372,39 @@
       },
       "decimals": 2
     },
+    "measure_watt_avg": {
+      "type": "number",
+      "title": {
+        "en": "Power",
+        "nl": "Vermogen",
+        "de": "Leistung",
+        "fr": "Puissance",
+        "it": "Potenza",
+        "sv": "Effekt",
+        "no": "Effekt",
+        "es": "Potencia",
+        "da": "Effekt"
+      },
+      "desc": {
+        "en": "Power in Watt (W)",
+        "nl": "Vermogen in Watt (W)",
+        "de": "Leistung in Watt (W)",
+        "fr": "Puissance  en Watt (W)",
+        "it": "Potenza in Watt (W)",
+        "sv": "Effekt i watt (W)",
+        "no": "Effekt i watt (W)",
+        "es": "Potencia en vatios (W)",
+        "da": "Effekt i Watt (W)"
+      },
+      "units": {
+        "en": "Watt"
+      },
+      "decimals": 1,
+      "getable": true,
+      "setable": false,
+      "insights": true,
+      "icon": "/assets/measure_watt_avg.svg"
+    },
     "measure_watt_max": {
       "type": "number",
       "title": {
@@ -1120,7 +1425,7 @@
       "type": "number",
       "title": {
         "en": "Minimum",
-        "nl": "PiMinimumek"
+        "nl": "Minimum"
       },
       "uiComponent": "sensor",
       "icon": "/assets/minimum.svg",
@@ -1406,7 +1711,7 @@
       "icon": "/assets/money_h.svg",
       "getable": true,
       "setable": false,
-      "insights": false,
+      "insights": true,
       "units": {
         "en": "¤"
       },
@@ -1422,7 +1727,7 @@
       "icon": "/assets/money_m.svg",
       "getable": true,
       "setable": false,
-      "insights": false,
+      "insights": true,
       "units": {
         "en": "¤"
       },
@@ -1438,7 +1743,7 @@
       "icon": "/assets/money_y.svg",
       "getable": true,
       "setable": false,
-      "insights": false,
+      "insights": true,
       "units": {
         "en": "¤"
       },
@@ -1454,7 +1759,7 @@
       "icon": "/assets/money_d.svg",
       "getable": true,
       "setable": false,
-      "insights": true,
+      "insights": false,
       "units": {
         "en": "¤"
       },
@@ -1470,7 +1775,7 @@
       "icon": "/assets/money_h.svg",
       "getable": true,
       "setable": false,
-      "insights": true,
+      "insights": false,
       "units": {
         "en": "¤"
       },
@@ -1486,7 +1791,7 @@
       "icon": "/assets/money_m.svg",
       "getable": true,
       "setable": false,
-      "insights": true,
+      "insights": false,
       "units": {
         "en": "¤"
       },
