--- a/.homeycompose/capabilities/measure_watt_min.json
+++ b/.homeycompose/capabilities/measure_watt_min.json
@@ -2,7 +2,7 @@
   "type": "number",
   "title": {
     "en": "Minimum",
-    "nl": "PiMinimumek"
+    "nl": "Minimum"
   },
   "uiComponent": "sensor",
   "icon": "/assets/minimum.svg",
