--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "compatibility": ">=5.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -408,7 +408,7 @@
               },
               "value": "0101",
               "hint": {
-                "en": "On this date the month and year total will reset to 0. Format is ddmm. Default is 0101 (1 January)"
+                "en": "On this date the month and year total will reset to 0. Format is ddmm. Default is 0101 (1 January). ATTENTION: If you change this date you need to manually correct the This Month Start and This Year Start values."
               }
             },
             {
@@ -749,7 +749,7 @@
               },
               "value": "0101",
               "hint": {
-                "en": "On this date the month and year total will reset to 0. Format is ddmm. Default is 0101 (1 January)"
+                "en": "On this date the month and year total will reset to 0. Format is ddmm. Default is 0101 (1 January). ATTENTION: If you change this date you need to manually correct the This Month Start and This Year Start values."
               }
             },
             {
@@ -1090,7 +1090,7 @@
               },
               "value": "0101",
               "hint": {
-                "en": "On this date the month and year total will reset to 0. Format is ddmm. Default is 0101 (1 January)"
+                "en": "On this date the month and year total will reset to 0. Format is ddmm. Default is 0101 (1 January). ATTENTION: If you change this date you need to manually correct the This Month Start and This Year Start values."
               }
             },
             {
@@ -1330,8 +1330,8 @@
       },
       "decimals": 4,
       "units": {
-        "en": "m³ /hr",
-        "nl": "m³ /uur"
+        "en": "L/minute",
+        "nl": "L/minuut"
       },
       "getable": true,
       "setable": false,
