--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "4.0.2",
+  "version": "4.1.0",
   "compatibility": ">=5.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -119,6 +119,32 @@
           }
         ],
         "id": "measure_watt_avg_changed"
+      },
+      {
+        "title": {
+          "en": "The price has changed",
+          "nl": "De prijs is veranderd"
+        },
+        "highlight": true,
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=dap"
+          }
+        ],
+        "tokens": [
+          {
+            "name": "meter_price_h0",
+            "title": {
+              "en": "Price now",
+              "nl": "Prijs nu"
+            },
+            "type": "number",
+            "example": 27.5
+          }
+        ],
+        "id": "meter_price_h0_changed copy"
       }
     ],
     "actions": [
@@ -296,6 +322,138 @@
     ]
   },
   "drivers": [
+    {
+      "name": {
+        "en": "Day-Ahead 1H Prices",
+        "nl": "Day-Ahead 1U Prijzen"
+      },
+      "class": "sensor",
+      "capabilities": [],
+      "platforms": [
+        "local"
+      ],
+      "connectivity": [],
+      "images": {
+        "small": "/drivers/dap/assets/images/small.png",
+        "large": "/drivers/dap/assets/images/large.png"
+      },
+      "pair": [
+        {
+          "id": "list_devices",
+          "template": "list_devices",
+          "options": {
+            "singular": true
+          },
+          "navigation": {
+            "next": "add_devices"
+          }
+        },
+        {
+          "id": "add_devices",
+          "template": "add_devices"
+        }
+      ],
+      "settings": [
+        {
+          "type": "group",
+          "label": {
+            "en": "Bidding Zone information",
+            "nl": "Biedzone informatie"
+          },
+          "children": [
+            {
+              "id": "biddingZone",
+              "type": "label",
+              "label": {
+                "en": "Bidding zone",
+                "nl": "Biedzone"
+              },
+              "value": "unknown"
+            },
+            {
+              "id": "description",
+              "type": "label",
+              "label": {
+                "en": "Description",
+                "nl": "Omschrijving"
+              },
+              "value": "unknown"
+            }
+          ]
+        },
+        {
+          "type": "group",
+          "label": {
+            "en": "Price settings",
+            "nl": "Prijs instellingen"
+          },
+          "children": [
+            {
+              "id": "variableMarkup",
+              "type": "number",
+              "label": {
+                "en": "Variable markup (%)",
+                "nl": "Variabele opslag (%)"
+              },
+              "value": 0,
+              "hint": {
+                "en": "Enter the percentage with which the net price must be increased. E.g. for VAT.",
+                "nl": "Voer het percentage in waarmee de netto prijs verhoogd moet worden. Bijvoorbeeld voor BTW."
+              }
+            },
+            {
+              "id": "fixedMarkup",
+              "type": "number",
+              "label": {
+                "en": "Fixed markup per kWh (EUR)",
+                "nl": "Vaste opslag per kWh (EUR)"
+              },
+              "value": 0,
+              "hint": {
+                "en": "Enter the fixed amount with which the price must be increased per kWh, incl. VAT. E.g. for purchase fee.",
+                "nl": "Voer het vaste bedrag in waarmee de prijs per kWh verhoogd moet worden incl. BTW. Bijvoorbeeld voor inkoopvergoeding, Energie bvelasting, ODE."
+              }
+            },
+            {
+              "id": "exchangeRate",
+              "type": "number",
+              "label": {
+                "en": "Exchange rate",
+                "nl": "Wisselkoers"
+              },
+              "value": 1,
+              "hint": {
+                "en": "If you do not want to use EURO, enter the exchange rate to your preferred currency.",
+                "nl": "Als je geen EURO's wilt gebruiken kun je hier de wisselkoers ingeven naar de gewenste munteenheid."
+              }
+            }
+          ]
+        },
+        {
+          "type": "group",
+          "label": {
+            "en": "Various settings",
+            "nl": "Overige instellingen"
+          },
+          "children": [
+            {
+              "id": "sendTariff",
+              "type": "checkbox",
+              "label": {
+                "en": "Send tariff",
+                "nl": "Stuur tarief"
+              },
+              "value": false,
+              "hint": {
+                "en": "Every hour the price per kWh will be set as tariff for PBTH devices, without the need to create a flow.",
+                "nl": "Ieder uur wordt de prijs per kWh ingesteld als tarief voor PBTH devices, zonder dat een flow gemaakt hoeft te worden."
+              }
+            }
+          ]
+        }
+      ],
+      "id": "dap"
+    },
     {
       "name": {
         "en": "Gas Summarizer"
@@ -1834,6 +1992,166 @@
       "getable": true,
       "setable": false,
       "uiComponent": "sensor"
+    },
+    "meter_price_h0": {
+      "type": "number",
+      "title": {
+        "en": "Price now",
+        "nl": "Prijs nu"
+      },
+      "uiComponent": "sensor",
+      "icon": "/assets/tariff.svg",
+      "getable": true,
+      "setable": false,
+      "insights": true,
+      "units": {
+        "en": "¤"
+      },
+      "decimals": 4
+    },
+    "meter_price_h1": {
+      "type": "number",
+      "title": {
+        "en": "Price +1H",
+        "nl": "Prijs +1U"
+      },
+      "uiComponent": "sensor",
+      "icon": "/assets/tariff.svg",
+      "getable": true,
+      "setable": false,
+      "insights": true,
+      "units": {
+        "en": "¤"
+      },
+      "decimals": 4
+    },
+    "meter_price_h2": {
+      "type": "number",
+      "title": {
+        "en": "Price +2H",
+        "nl": "Prijs +2U"
+      },
+      "uiComponent": "sensor",
+      "icon": "/assets/tariff.svg",
+      "getable": true,
+      "setable": false,
+      "insights": true,
+      "units": {
+        "en": "¤"
+      },
+      "decimals": 4
+    },
+    "meter_price_h3": {
+      "type": "number",
+      "title": {
+        "en": "Price +3H",
+        "nl": "Prijs +3U"
+      },
+      "uiComponent": "sensor",
+      "icon": "/assets/tariff.svg",
+      "getable": true,
+      "setable": false,
+      "insights": true,
+      "units": {
+        "en": "¤"
+      },
+      "decimals": 4
+    },
+    "meter_price_h4": {
+      "type": "number",
+      "title": {
+        "en": "Price +4H",
+        "nl": "Prijs +4U"
+      },
+      "uiComponent": "sensor",
+      "icon": "/assets/tariff.svg",
+      "getable": true,
+      "setable": false,
+      "insights": true,
+      "units": {
+        "en": "¤"
+      },
+      "decimals": 4
+    },
+    "meter_price_h5": {
+      "type": "number",
+      "title": {
+        "en": "Price +5H",
+        "nl": "Prijs +5U"
+      },
+      "uiComponent": "sensor",
+      "icon": "/assets/tariff.svg",
+      "getable": true,
+      "setable": false,
+      "insights": true,
+      "units": {
+        "en": "¤"
+      },
+      "decimals": 4
+    },
+    "meter_price_h6": {
+      "type": "number",
+      "title": {
+        "en": "Price +6H",
+        "nl": "Prijs +6U"
+      },
+      "uiComponent": "sensor",
+      "icon": "/assets/tariff.svg",
+      "getable": true,
+      "setable": false,
+      "insights": true,
+      "units": {
+        "en": "¤"
+      },
+      "decimals": 4
+    },
+    "meter_price_h7": {
+      "type": "number",
+      "title": {
+        "en": "Price +7H",
+        "nl": "Prijs +7U"
+      },
+      "uiComponent": "sensor",
+      "icon": "/assets/tariff.svg",
+      "getable": true,
+      "setable": false,
+      "insights": true,
+      "units": {
+        "en": "¤"
+      },
+      "decimals": 4
+    },
+    "meter_price_next_8h_avg": {
+      "type": "number",
+      "title": {
+        "en": "Price next 8H avg.",
+        "nl": "Prijs komende 8U gem."
+      },
+      "uiComponent": "sensor",
+      "icon": "/assets/tariff.svg",
+      "getable": true,
+      "setable": false,
+      "insights": true,
+      "units": {
+        "en": "¤"
+      },
+      "decimals": 4
+    },
+    "meter_price_this_day_avg": {
+      "type": "number",
+      "title": {
+        "en": "Price this day avg.",
+        "nl": "Prijs deze dag gem."
+      },
+      "uiComponent": "sensor",
+      "icon": "/assets/tariff.svg",
+      "getable": true,
+      "setable": false,
+      "insights": true,
+      "units": {
+        "en": "¤"
+      },
+      "decimals": 4
     },
     "meter_tariff": {
       "type": "number",
