--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "https://github.com/gruijter/com.gruijter.powerhour.git"
   },
   "dependencies": {
-    "homey-api": "^1.5.8"
+    "homey-api": "^1.5.8",
+    "xml-js": "^1.6.11"
   }
 }
