--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "4.1.0",
+  "version": "4.1.1",
   "compatibility": ">=5.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -32,7 +32,11 @@
       "cost",
       "tariff",
       "prediction",
-      "peak"
+      "peak",
+      "day ahead",
+      "spot market",
+      "price",
+      "pricing"
     ]
   },
   "permissions": [
@@ -2124,8 +2128,8 @@
     "meter_price_next_8h_avg": {
       "type": "number",
       "title": {
-        "en": "Price next 8H avg.",
-        "nl": "Prijs komende 8U gem."
+        "en": "Avg. price next 8H",
+        "nl": "Gem. prijs komende 8U"
       },
       "uiComponent": "sensor",
       "icon": "/assets/tariff.svg",
@@ -2140,8 +2144,8 @@
     "meter_price_this_day_avg": {
       "type": "number",
       "title": {
-        "en": "Price this day avg.",
-        "nl": "Prijs deze dag gem."
+        "en": "Avg. price this day",
+        "nl": "Gem. prijs deze dag"
       },
       "uiComponent": "sensor",
       "icon": "/assets/tariff.svg",
