--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "4.1.2",
+  "version": "4.1.4",
   "compatibility": ">=5.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -148,7 +148,7 @@
             "example": 27.5
           }
         ],
-        "id": "meter_price_h0_changed copy"
+        "id": "meter_price_h0_changed"
       }
     ],
     "actions": [
@@ -692,6 +692,19 @@
               "hint": {
                 "en": "The tariff is used to calculate the monetary value. It can be dynamically changed via a flow.",
                 "nl": "Het tarief wordt gebruikt om de geldwaarde te berekenen. Het kan dynamisch worden aangepast via een flow."
+              }
+            },
+            {
+              "id": "tariff_via_flow",
+              "type": "checkbox",
+              "label": {
+                "en": "Tariff via flow",
+                "nl": "Tarief via flow"
+              },
+              "value": true,
+              "hint": {
+                "en": "Include this device when setting a new tariff via flow.",
+                "nl": "Dit apparaat meenemen bij het instellen van een nieuw tarief via flow."
               }
             },
             {
@@ -1374,6 +1387,19 @@
               "hint": {
                 "en": "The tariff is used to calculate the monetary value. It can be dynamically changed via a flow.",
                 "nl": "Het tarief wordt gebruikt om de geldwaarde te berekenen. Het kan dynamisch worden aangepast via een flow."
+              }
+            },
+            {
+              "id": "tariff_via_flow",
+              "type": "checkbox",
+              "label": {
+                "en": "Tariff via flow",
+                "nl": "Tarief via flow"
+              },
+              "value": true,
+              "hint": {
+                "en": "Include this device when setting a new tariff via flow.",
+                "nl": "Dit apparaat meenemen bij het instellen van een nieuw tarief via flow."
               }
             },
             {
