--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "4.1.4",
+  "version": "4.2.0",
   "compatibility": ">=5.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -409,13 +409,13 @@
               "id": "fixedMarkup",
               "type": "number",
               "label": {
-                "en": "Fixed markup per kWh (EUR)",
-                "nl": "Vaste opslag per kWh (EUR)"
+                "en": "Fixed markup per kWh/m3 (EUR)",
+                "nl": "Vaste opslag per kWh/m3 (EUR)"
               },
               "value": 0,
               "hint": {
-                "en": "Enter the fixed amount with which the price must be increased per kWh, incl. VAT. E.g. for purchase fee.",
-                "nl": "Voer het vaste bedrag in waarmee de prijs per kWh verhoogd moet worden incl. BTW. Bijvoorbeeld voor inkoopvergoeding, Energie bvelasting, ODE."
+                "en": "Enter the fixed amount with which the price must be increased per kWh/m3, incl. VAT. E.g. for purchase fee.",
+                "nl": "Voer het vaste bedrag in waarmee de prijs per kWh/m3 verhoogd moet worden incl. BTW. Bijvoorbeeld voor inkoopvergoeding, Energie bvelasting, ODE."
               }
             },
             {
