--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -1,6 +1,6 @@
 {
   "id": "com.gruijter.powerhour",
-  "version": "4.2.2",
+  "version": "4.2.3",
   "compatibility": ">=5.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -35,7 +35,10 @@
       "day ahead",
       "spot market",
       "price",
-      "pricing"
+      "pricing",
+      "utility bill",
+      "stromregning",
+      "rekening"
     ]
   },
   "permissions": [
