--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "4.3.3",
+  "version": "4.3.4",
   "compatibility": ">=5.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -765,10 +765,10 @@
               "nl": "periode"
             },
             "placeholder": {
-              "en": "2 - 8"
+              "en": "2 - 12"
             },
             "min": 2,
-            "max": 8,
+            "max": 12,
             "step": 1
           },
           {
@@ -779,10 +779,10 @@
               "nl": "aantal"
             },
             "placeholder": {
-              "en": "1 - 6"
+              "en": "1 - 8"
             },
             "min": 1,
-            "max": 6,
+            "max": 8,
             "step": 1
           },
           {
@@ -812,6 +812,50 @@
           }
         ],
         "id": "price_lowest_before"
+      },
+      {
+        "title": {
+          "en": "The price becomes on of the lowest of today",
+          "nl": "De prijs wordt één van de laagste van vandaag"
+        },
+        "titleFormatted": {
+          "en": "The price becomes one of [[number]] lowest of today",
+          "nl": "De prijs wordt een van de [[number]] laagste van vandaag"
+        },
+        "highlight": true,
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=dap"
+          },
+          {
+            "type": "number",
+            "name": "number",
+            "title": {
+              "en": "number",
+              "nl": "aantal"
+            },
+            "placeholder": {
+              "en": "1 - 16"
+            },
+            "min": 1,
+            "max": 16,
+            "step": 1
+          }
+        ],
+        "tokens": [
+          {
+            "name": "meter_price_h0",
+            "title": {
+              "en": "Price now",
+              "nl": "Prijs nu"
+            },
+            "type": "number",
+            "example": 27.5
+          }
+        ],
+        "id": "price_lowest_today"
       }
     ],
     "actions": [
